include_directories(../Src)

add_executable(testbench testbench.cpp)

target_link_libraries(testbench PPLIB)

add_test(NAME Test1 COMMAND testbench ../../../TestData/01_test.xml)
add_test(NAME Test2 COMMAND testbench ../../../TestData/02_test.xml)
add_test(NAME Test3 COMMAND testbench ../../../TestData/03_test.xml)
add_test(NAME Test4 COMMAND testbench ../../../TestData/04_test.xml)
add_test(NAME Test5 COMMAND testbench ../../../TestData/05_test.xml)
add_test(NAME Test6 COMMAND testbench ../../../TestData/06_test.xml)
add_test(NAME Test7 COMMAND testbench ../../../TestData/07_test.xml)
add_test(NAME Test8 COMMAND testbench ../../../TestData/08_test.xml)
add_test(NAME Test9 COMMAND testbench ../../../TestData/09_test.xml)
add_test(NAME Test10 COMMAND testbench ../../../TestData/10_test.xml)
add_test(NAME Test11 COMMAND testbench ../../../TestData/11_test.xml)
add_test(NAME Test12 COMMAND testbench ../../../TestData/12_test.xml)
add_test(NAME Test13 COMMAND testbench ../../../TestData/13_test.xml)
add_test(NAME Test14 COMMAND testbench ../../../TestData/14_test.xml)
add_test(NAME Test15 COMMAND testbench ../../../TestData/15_test.xml)
add_test(NAME Test16 COMMAND testbench ../../../TestData/16_test.xml)
add_test(NAME Test17 COMMAND testbench ../../../TestData/17_test.xml)
add_test(NAME Test18 COMMAND testbench ../../../TestData/18_test.xml)
add_test(NAME Test19 COMMAND testbench ../../../TestData/19_test.xml)
add_test(NAME Test20 COMMAND testbench ../../../TestData/20_test.xml)
add_test(NAME Test21 COMMAND testbench ../../../TestData/21_test.xml)
add_test(NAME Test22 COMMAND testbench ../../../TestData/22_test.xml)
add_test(NAME Test23 COMMAND testbench ../../../TestData/23_test.xml)
add_test(NAME Test24 COMMAND testbench ../../../TestData/24_test.xml)
add_test(NAME Test25 COMMAND testbench ../../../TestData/25_test.xml)
add_test(NAME Test26 COMMAND testbench ../../../TestData/26_test.xml)
add_test(NAME Test27 COMMAND testbench ../../../TestData/27_test.xml)
add_test(NAME Test28 COMMAND testbench ../../../TestData/28_test.xml)
add_test(NAME Test29 COMMAND testbench ../../../TestData/29_test.xml)
add_test(NAME Test30 COMMAND testbench ../../../TestData/30_test.xml)
add_test(NAME Test31 COMMAND testbench ../../../TestData/31_test.xml)
add_test(NAME Test32 COMMAND testbench ../../../TestData/32_test.xml)
add_test(NAME Test33 COMMAND testbench ../../../TestData/33_test.xml)
add_test(NAME Test34 COMMAND testbench ../../../TestData/34_test.xml)
add_test(NAME Test35 COMMAND testbench ../../../TestData/35_test.xml)
add_test(NAME Test36 COMMAND testbench ../../../TestData/36_test.xml)
add_test(NAME Test37 COMMAND testbench ../../../TestData/37_test.xml)
add_test(NAME Test38 COMMAND testbench ../../../TestData/38_test.xml)
add_test(NAME Test39 COMMAND testbench ../../../TestData/39_test.xml)
add_test(NAME Test40 COMMAND testbench ../../../TestData/40_test.xml)
add_test(NAME Test41 COMMAND testbench ../../../TestData/41_test.xml)
add_test(NAME Test42 COMMAND testbench ../../../TestData/42_test.xml)
add_test(NAME Test43 COMMAND testbench ../../../TestData/43_test.xml)
add_test(NAME Test44 COMMAND testbench ../../../TestData/44_test.xml)
